# app/controllers/PostController.js
@@ -4,6 +4,19 @@ const Controller = require("./Controller");
 class PostController extends Controller{
 
 	async findAll(req, res) {
+		/**
+			#swagger.responses[200] = {
+				description: 'Posts found',
+				content: {
+					"application/json": {
+						schema:{
+							type: "array",
+							items: { "$ref": "#/components/schemas/Post"}
+						}
+					}
+				}
+			}
+		*/
 		try {
 			const posts = await Post.find();
 			super.success(res, posts);
@@ -13,6 +26,12 @@ class PostController extends Controller{
 	}
 
 	async findOne(req, res) {
+		/**
+			#swagger.responses[200] = {
+				description: 'Posts found',
+				schema:{"$ref": "#/components/schemas/Post"}
+			}
+		 */
 		try {
 			const post = await Post.findById(req.params.id);
 			super.success(res, post);
@@ -22,13 +41,25 @@ class PostController extends Controller{
 	}
 
 	async create(req, res) {
+		/**
+			#swagger.requestBody = {
+				required: true,
+				schema: { $ref: '#/components/schemas/CreatePostRequest'}
+			}
+		 */
+		/**
+			#swagger.responses[201] = {
+				description: 'Post created successfully',
+				schema: { $ref: '#/components/schemas/Post'}
+		 	}
+		 */
 		try {
 			const post = new Post({
 				entry: req.body.entry,
 				categories: req.body.categories,
 			});
 			await post.save();
-			super.success(res, post);
+			super.success(res, post, 201);
 		} catch (error) {
 			super.error(res, error);
 		}
@@ -37,6 +68,12 @@ class PostController extends Controller{
 
 	async update(req, res) {
 		try {
+			/**
+				#swagger.requestBody = {
+					required: true,
+					schema: { $ref: '#/components/schemas/UpdatePostRequest'}
+				}
+			*/
 			const post = await Post.findByIdAndUpdate(req.params.id, {
 				entry: req.body.entry,
 				categories: req.body.categories,
@@ -48,6 +85,12 @@ class PostController extends Controller{
 	}
 
 	async delete(req, res) {
+		/**
+			#swagger.responses[200] = {
+				description: 'Posts found',
+				schema:{"$ref": "#/components/schemas/Post"}
+			}
+		*/
 		try {
 			const post = await Post.findByIdAndDelete(req.params.id);
 			super.success(res, post);
